# comp3046_milestone3

./: .gitignore  CMakeLists.txt  README.md  data_loader.h  main.cpp
header/: MathVector.h  Matrix.h  MatrixVector.h
src/: NeuralNetwork.cpp  main.cpp
